--- a/app/_modules.scss
+++ b/app/_modules.scss
@@ -1,4 +1,4 @@
-@import "library.blocks\header\header.scss";
-@import "common.blocks\page\page.scss";
-@import "common.blocks\header\header.scss";
-@import "common.blocks\logo\logo.scss";
+@import "library.blocks/header/header.scss";
+@import "common.blocks/page/page.scss";
+@import "common.blocks/header/header.scss";
+@import "common.blocks/logo/logo.scss";
