--- a/app/SASS/mixins/grid-mixins.scss
+++ b/app/SASS/mixins/grid-mixins.scss
@@ -3,7 +3,7 @@
 // https://github.com/nicothin/NTH-start-project/
 // Файл с этими примесями
 // https://github.com/nicothin/NTH-start-project/blob/master/src/scss/mixins/grid-mixins.scss
-// описание, примеры https://codepen.io/nicothin/pen/aJEOwE
+// Описание, примеры https://codepen.io/nicothin/pen/aJEOwE
 
 
 
