--- a/app/SASS/variables.scss
+++ b/app/SASS/variables.scss
@@ -1,1 +1,10 @@
-$gutter-top: 12px;
+$base-breakpoint-name: md;
+
+$grid-height: 18px;
+$gutter-top: 18px;
+
+$horizontalMarginHeader: 15px;
+$light-gray: #bbb;
+$gray: #666;
+$pink: #F6B7C4;
+$dark-pink: #f27a8a;
