--- a/app/blocks/common.blocks/page/page.scss
+++ b/app/blocks/common.blocks/page/page.scss
@@ -1,4 +1,11 @@
 //temp
 .page {
+    @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,cyrillic-ext');
+
+    font-family: 'PT Sans', sans-serif;
+
+    //temp
     background-color: #ccc;
+    
+
 }
