--- a/app/blocks/common.blocks/page/page.scss
+++ b/app/blocks/common.blocks/page/page.scss
@@ -1,9 +1,23 @@
 //temp
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,cyrillic-ext');
+// @font-face {
+//     font-family: PT Sans; 
+//     src: url(/fonts/PT_Sans-Web-Regular.ttf); 
+//     font-style: normal;
+//    }
+// @font-face {
+//     font-family: PT Sans; 
+//     src: url(/fonts/PT_Sans-Web-Bold.ttf); 
+//     font-style:  normal;
+//     font-weight: bold;
+//    }
+// @font-face {
+//     font-family: PT Sans; 
+//     src: url(/fonts/PT_Sans-Web-Italic.ttf);
+//     font-style:  italic;
+//    }
 .page {
-    @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,cyrillic-ext');
-
     font-family: 'PT Sans', sans-serif;
-
     //temp
     background-color: #ccc;
     
