--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -1,9 +1,14 @@
 $base-breakpoint-name: md;
-
+//базовый интерлиньяж(36px)/2
 $grid-height: 18px;
 $gutter-top: 18px;
 
-$horizontalMarginHeader: 15px;
+$base-font-size: 20px;
+
+
+
+$grid-gutter-width: 30px;
+
 $light-gray: #bbb;
 $gray: #666;
 $pink: #F6B7C4;
