--- a/app/blocks/common.blocks/header/header.scss
+++ b/app/blocks/common.blocks/header/header.scss
@@ -1,7 +1,10 @@
 .header {
   @include container();
 
+  box-sizing: border-box;
   height: #{$grid-height*7};
+  padding-top: $gutter-top*.5;
+  padding-bottom: $gutter-top*.5;
 
   &__row {
     @include row();
@@ -11,29 +14,33 @@
   }
 
   &__logo-img {
-    //@include col();
+    @include col();
     @include col($base-breakpoint-name, 1);
+    border: 1px solid;
 
     height: 100%;
+    margin-right: -$grid-gutter-width/2.2;
   }
 
   &__logo-text {
-    //@include col();
+    @include col();
     @include col($base-breakpoint-name, 5);
 
     height: 100%;
     text-align: center;
-    //
-    background-color: white;
+    color: white;
+    border: 1px solid;
   }
 
   &__logo-name {
-    font-size: 58px;
+    font-size: $base-font-size*2.9;
+    border-bottom: 4px solid white;
+    line-height: 1em;
   }
 
   &__logo-occupation {
-    font-size: 38px;
+    font-size: $base-font-size*1.9;
+    line-height: .9em;
+    letter-spacing: 0.03em;
   }
 }
-
-
