--- a/app/blocks/common.blocks/header/header.scss
+++ b/app/blocks/common.blocks/header/header.scss
@@ -9,6 +9,7 @@
   &__row {
     @include row();
 
+    display: flex;
     height: 100%;
     justify-content: center;
   }
@@ -16,7 +17,6 @@
   &__logo-img {
     @include col();
     @include col($base-breakpoint-name, 1);
-    border: 1px solid;
 
     height: 100%;
     margin-right: -$grid-gutter-width/2.2;
@@ -29,7 +29,6 @@
     height: 100%;
     text-align: center;
     color: white;
-    border: 1px solid;
   }
 
   &__logo-name {
