--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -1,13 +1,20 @@
+
 $base-breakpoint-name: md;
+$max-breakpoint-name: xxl;
+$base-breakpoint: map-get($grid-breakpoints, $base-breakpoint-name);
+$max-breakpoint: map-get($grid-breakpoints, $max-breakpoint-name);
+
 //базовый интерлиньяж(36px)/2
 $grid-height: 18px;
 $gutter-top: 18px;
 
 $base-font-size: 20px;
 
-
-
+$grid-col-width: 70px;
 $grid-gutter-width: 30px;
+$grid-columns: 16;
+$grid-container-width: ($grid-col-width + $grid-gutter-width)*$grid-columns;
+
 
 $light-gray: #bbb;
 $gray: #666;
