--- a/app/blocks/common.blocks/header/header.scss
+++ b/app/blocks/common.blocks/header/header.scss
@@ -1,44 +1,47 @@
 .header {
-  @include container();
+  $height: $grid-height*7;
+
+
 
   box-sizing: border-box;
-  height: #{$grid-height*7};
+  height: $height;
   padding-top: $gutter-top*.5;
   padding-bottom: $gutter-top*.5;
 
   &__row {
-    @include row();
 
     display: flex;
-    height: 100%;
     justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
+    padding-left: $grid-gutter-width/2;
+    padding-right: $grid-gutter-width/2;
+    height: 100%;
+    max-width: $max-breakpoint;
+
   }
 
   &__logo-img {
-    @include col();
-    @include col($base-breakpoint-name, 1);
-
-    height: 100%;
-    margin-right: -$grid-gutter-width/2.2;
-  }
+    box-sizing: border-box;
+    height: $height - $grid-gutter-width/2;
+    margin-right: $grid-gutter-width;
+    width: $height - $grid-gutter-width/2;
+}
 
   &__logo-text {
-    @include col();
-    @include col($base-breakpoint-name, 5);
-
-    height: 100%;
+    //height: 100%;
     text-align: center;
     color: white;
   }
 
   &__logo-name {
-    font-size: $base-font-size*2.9;
+    font-size: $base-font-size*2.5;
     border-bottom: 4px solid white;
     line-height: 1em;
   }
 
   &__logo-occupation {
-    font-size: $base-font-size*1.9;
+    font-size: $base-font-size*1.7;
     line-height: .9em;
     letter-spacing: 0.03em;
   }
