--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -6,7 +6,7 @@ $max-breakpoint: map-get($grid-breakpoints, $max-breakpoint-name);
 
 //базовый интерлиньяж(36px)/2
 $grid-height: 18px;
-$gutter-top: 18px;
+$gutter-vertical: 18px;
 
 $base-font-size: 20px;
 
