--- a/app/SASS/mixins/_grid.scss
+++ b/app/SASS/mixins/_grid.scss
@@ -6,3 +6,20 @@ $grid-breakpoints: (
         xl: 1200px,
         xxl: 1600px
 ) !default;
+
+@mixin flex-container($breakpoint: $base-breakpoint, $max-width: $max-breakpoint) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: $grid-gutter-width/2;
+  padding-right: $grid-gutter-width/2;
+  max-width: $max-width;
+  margin: auto;
+
+  //показываем в одну строку
+  @media (max-width: $breakpoint) {
+    flex-wrap: wrap;
+  }
+
+}
