--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -21,4 +21,5 @@ $grid-container-width: ($grid-col-width + $grid-gutter-width)*$grid-columns;
 $light-gray: #bbb;
 $gray: #666;
 $pink: #F6B7C4;
+$pink-text: #fc90b8;
 $dark-pink: #f27a8a;
