--- a/app/SASS/_modules.scss
+++ b/app/SASS/_modules.scss
@@ -1,3 +1,4 @@
 @import "../blocks/common.blocks/page/page.scss";
 @import "../blocks/common.blocks/header/header.scss";
 @import "../blocks/common.blocks/logo/logo.scss";
+@import "../blocks/common.blocks/nav-menu/nav-menu.scss";
