--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -1,5 +1,11 @@
-//????????
-//breakpoint-name
+//with use _grid.scss
+
+// usu screen sizes
+$scr-md:    768px;
+$scr-lg:    992px;
+$scr-xxl:   1600px;
+
+//! not use: breakpoint-name
 $base-bp-name: md;
 $max-bp-name: xxl;
 
@@ -12,10 +18,11 @@ $gutter-vertical: 18px;
 
 $base-font-size: 20px;
 
+//grid set
 $grid-col-width: 70px;
 $grid-gutter-width: 30px;
 $grid-columns: 16;
-$grid-container-width: ($grid-col-width + $grid-gutter-width)*$grid-columns;
+$grid-cont-max-width: $max-bp - $grid-gutter-width;
 
 
 $light-gray: #bbb;
