--- a/app/SASS/_variables.scss
+++ b/app/SASS/_variables.scss
@@ -3,6 +3,7 @@
 // usu screen sizes
 $scr-md:    768px;
 $scr-lg:    992px;
+$scr-xl:    1200px;
 $scr-xxl:   1600px;
 
 //! not use: breakpoint-name
