--- a/app/SASS/mixins/_grid.scss
+++ b/app/SASS/mixins/_grid.scss
@@ -29,7 +29,7 @@ $grid-cont-max-width: $max-bp - $grid-gutter-width !default;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  max-width: 100%;
+  //max-width: 100%;
   flex-wrap: wrap;
 }
 
