--- a/app/libs/fontello/css/fontello.css
+++ b/app/libs/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?79804545');
-  src: url('../font/fontello.eot?79804545#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?79804545') format('woff2'),
-       url('../font/fontello.woff?79804545') format('woff'),
-       url('../font/fontello.ttf?79804545') format('truetype'),
-       url('../font/fontello.svg?79804545#fontello') format('svg');
+  src: url('fonts/fontello.eot?79804545');
+  src: url('fonts/fontello.eot?79804545#iefix') format('embedded-opentype'),
+       url('fonts/fontello.woff2?79804545') format('woff2'),
+       url('fonts/fontello.woff?79804545') format('woff'),
+       url('fonts/fontello.ttf?79804545') format('truetype'),
+       url('fonts/fontello.svg?79804545#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
