--- a/app/blocks/common.blocks/simple-slider/simple-slider.scss
+++ b/app/blocks/common.blocks/simple-slider/simple-slider.scss
@@ -1,4 +1,4 @@
-$transSpeed: .5s; /*paging speed*/
+$transSpeed: 1s; /*paging speed*/
 $font-size-button:  $base-font-size*1.5;
 $font-size-button-mv: $base-font-size*1.25;
 
@@ -14,16 +14,18 @@ $font-size-button-mv: $base-font-size*1.25;
         position: absolute;
         width: 100%;
         height: 100%;
-        transition: opacity $transSpeed;
         opacity: 1;
         z-index: -1;
+
+        //main animation property
+        transition: opacity $transSpeed ease-in;
     }
 
     &__img {
         position: absolute;
         width: 100%;
         height: 100%;
-        transition: transform $transSpeed; 
+        transition: opacity $transSpeed; 
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
