--- a/app/blocks/common.blocks/simple-slider/simple-slider.scss
+++ b/app/blocks/common.blocks/simple-slider/simple-slider.scss
@@ -1,6 +1,11 @@
 $transSpeed: 1s; /*paging speed*/
-$font-size-button:  $base-font-size*1.5;
+
+$font-size-button:  $base-font-size*1.8;
 $font-size-button-mv: $base-font-size*1.25;
+
+$font-color-container-info: white;
+$font-size-title-info: $base-font-size*1.6;
+$font-size-description-info: $base-font-size*1.5;
 
 .simple-slider {
     width: 100%;
@@ -95,6 +100,38 @@ $font-size-button-mv: $base-font-size*1.25;
 
 
     //------------------------------------------------------------------------------
+    //  container-info
+    //------------------------------------------------------------------------------
+
+    &__container-info {
+        color: $font-color-container-info;
+        text-align: center;
+        position: absolute;
+        left: 0; right: 0;
+        bottom: 10%;
+        margin: auto;
+        width: 40%;
+        max-width: $scr-sm;
+        overflow: auto;
+        z-index: 10;
+    }
+
+    &__title-info {
+        font-size: $font-size-title-info;
+        letter-spacing: 0.04em;
+        margin: auto;
+        display: inline-block;
+        padding: 0 1em;
+        border-bottom: 2px solid white;
+        //transform: scale(1.1, 1.1);
+    }
+    
+    &__description-info {
+        font-size: $font-size-description-info;
+        padding: 0 0.5em;
+    }
+    
+    //------------------------------------------------------------------------------
     //  mobile version
     //------------------------------------------------------------------------------
     
@@ -145,25 +182,6 @@ $font-size-button-mv: $base-font-size*1.25;
 
 }
 
-.simple-slider__info {
-    border-radius: 3px;
-    font: 24px/40px 'Roboto-Regular', Arial, Helvetica, sans-serif;
-    color: #222;
-    position: absolute;
-    left: 2.5%; bottom: 20px;
-    height: 40px;
-    opacity: 1;
-    will-change: opacity, transform, background-color;
-    transform: translateY(0);
-    transition:transform .3s, opacity .3s, background-color .1s;
-    background: #AAFFA2;
-}
-
-.simple-slider__info_hidden {
-    opacity: 0;
-    transition-duration: 0s;
-    transform: translateY(-200%);
-}
 
 
 
