--- a/app/blocks/common.blocks/simple-slider/simple-slider.scss
+++ b/app/blocks/common.blocks/simple-slider/simple-slider.scss
@@ -1,5 +1,3 @@
-$transSpeed: 1s; /*paging speed*/
-
 $font-size-button:  $base-font-size*1.8;
 $font-size-button-mv: $base-font-size*1.25;
 
@@ -20,18 +18,15 @@ $font-size-description-info-mv: $base-font-size*1;
         position: absolute;
         width: 100%;
         height: 100%;
-        //opacity: 1;
         z-index: -1;
-
-        //main animation property
-        transition: opacity $transSpeed ease-in;
+        background-color: #fff;
     }
 
     &__img {
         position: absolute;
         width: 100%;
         height: 100%;
-        transition: opacity $transSpeed;
+        transition: opacity .8s;
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
