--- a/app/blocks/common.blocks/simple-slider/simple-slider.scss
+++ b/app/blocks/common.blocks/simple-slider/simple-slider.scss
@@ -11,7 +11,7 @@ $tran-duration-info: 1s;
 $tran-info-offset: 150px; //not %
 
 $bullet-size: 1.2em;
-$bullet-margin: 1em;
+$bullet-margin: .8em;
 $bullet-border-width: 2px;
 
 .simple-slider {
